--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
 * {
-  margin: 0;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+a {
+	color: inherit;
+}
+a:hover {
+	color: inherit;
+	text-decoration: none;
+}
+.App {
+	min-height: 100vh;
+	color: #fff;
+	background: linear-gradient(104.77deg, #ffffff 0%, #f18f88 0.01%, #1870ed 100%);
+}
+
+.nes-select {
+	width: auto;
+}
+#dark_select {
+	background-color: transparent;
+
+	border: 2px solid #ffffff;
+	outline: none;
+	width: auto;
+}
+#dark_select option {
+	color: #000;
 }
