--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,41 @@ a:hover {
 #dark_select option {
 	color: #000;
 }
+.instructionBtn {
+	position: fixed;
+	font-size: 0.8rem;
+	bottom: 10px;
+	right: 10px;
+	height: 50px;
+	width: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgb(40, 44, 44);
+	border-radius: 100%;
+}
+.instruction {
+	z-index: 99999;
+	padding: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #000;
+	transform: translate(-50%, -50%);
+	position: absolute;
+	font-size: 0.8rem;
+	top: 50%;
+	left: 50%;
+	height: 80vh;
+	width: 80vw;
+	background-color: #fff;
+}
+.instruction .close {
+	position: absolute;
+	top: 0px;
+	right: 10px;
+	font-size: 2rem;
+}
+.instruction img {
+	width: 90%;
+}
